<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="16dp"
    tools:context=".Loginpage">

    <!-- Logo at the top center -->
    <ImageView
        android:id="@+id/logo"
        android:layout_width="243dp"
        android:layout_height="191dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:src="@drawable/backlogo"
        android:scaleType="fitXY" />

    <!-- Form elements -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="332dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/roundedcorner"
            android:hint="@string/EMAIL"
            android:inputType="text"
            android:padding="20dp"
            android:textColor="@color/white"
            android:backgroundTint="#66C2D6"
            android:textColorHint="@color/white"
            android:fontFamily="@font/nico" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordinput"
            android:layout_width="332dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/roundedcorner"
            android:hint="@string/pas"
            android:inputType="textPassword"
            android:padding="20dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:fontFamily="@font/nico"
            android:backgroundTint="#6EC8DC"
            android:textSize="20sp" />

        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:visibility="gone" />

        <Button
            android:id="@+id/loginbutton"
            android:layout_width="232dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:padding="18dp"
            android:text="@string/log"
            android:textColor="#000000"
            android:fontFamily="@font/nico"
            android:backgroundTint="#6CF400"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/sinupredirecttext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/soc1"
            android:textColor="@color/black"
            android:fontFamily="@font/nico"
            android:textSize="18sp" />

    </LinearLayout>
</RelativeLayout>
